# mlops_sign_mnist

./: README.md  requirements.txt
mlops_sign_mnist/: .gitignore  Makefile  README.md  cloudbuild.yaml  data.dvc  debug.txt  pyproject.toml  requirements.txt  trace.json
mlops_sign_mnist/.dvc/: config
mlops_sign_mnist/.github/workflows/: tests.yaml
mlops_sign_mnist/API/: api.py  api_example.py
mlops_sign_mnist/configs/: config.yaml  sweep.yaml  vertexai.yaml
mlops_sign_mnist/data/processed/: labels_test.pt  labels_train.pt
mlops_sign_mnist/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
mlops_sign_mnist/dockerfiles/cloud/: fastapi_deployment.dockerfile  predict_model.dockerfile  train_model.dockerfile
mlops_sign_mnist/docs/: mkdocs.yaml
mlops_sign_mnist/docs/source/: index.md
mlops_sign_mnist/mlops_sign_mnist/: __init__.py  api_example.py  data.json  main.py  predict_model.py  scripting.py  train_model.py
mlops_sign_mnist/mlops_sign_mnist/data/: make_dataset.py
mlops_sign_mnist/mlops_sign_mnist/model_store/: custom_handler.py  sign_classification.mar
mlops_sign_mnist/models/: sign_language_mnist_model.pth  sign_language_mnist_model_15.pth  sign_language_mnist_model_20240706_153130.pth  sign_language_mnist_model_20240706_170843.pth  sign_language_mnist_model_20240706_171200.pth  sign_language_mnist_model_20240706_172349.pth  sign_language_mnist_model_20240706_172357.pth  sign_language_mnist_model_20240706_172404.pth  sign_language_mnist_model_20240711_162401.pth
mlops_sign_mnist/tests/: test_api.py  test_data.py  test_model.py
(+4 files in other folders)
