[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_sign_mnist"
version = "0.0.1"
description = "The goal of our project is to use convolutional neural networks (CNNs) to accurately classify hand gestures from the Sign Language MNIST dataset. This dataset contains images of American Sign Language (ASL) letters, and our aim is to create a model that can recognize and classify these gestures with high accuracy."
authors = [
  { anjali = "Anjali Sarawgi" },
  {ali = "Ali Najibpour Nashi"},
  {anas = "Annas Namouchi"},
  {jp = "John-Pierre Weideman"}
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops_sign_mnist"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]
